Give featured post item min-height. Ensure hover arrow gets enough space on narrow viewports.

--- a/src/components/PostCard/FeaturedPostCard.module.scss
+++ b/src/components/PostCard/FeaturedPostCard.module.scss
@@ -16,6 +16,7 @@
   padding: 40px 18px;
   width: 100%;
   display: block;
+  min-height: 315px;
 
   @include respond-to(lg) {
     margin-left: auto;
